--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,8 @@
   "singleQuote": false,
   "trailingComma": "all",
   "semi": true,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "importOrder": ["^(react|next?/?([a-zA-Z/]*))$", "<THIRD_PARTY_MODULES>", "^@/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "plugins": ["@trivago/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"]
 }
